--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.7",
     "babel-loader": "8.2.5",
     "clean-webpack-plugin": "4.0.0",
+    "core-js": "3.23.5",
     "css-loader": "6.7.1",
     "cssnano": "5.1.12",
     "html-webpack-plugin": "5.5.0",
@@ -24,8 +25,5 @@
     "webpack": "5.76.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.9.3"
-  },
-  "dependencies": {
-    "core-js": "3.23.5"
   }
 }
