--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
     "cssnano": "5.1.12",
     "gh-pages": "^6.1.0",
     "html-webpack-plugin": "5.5.0",
+    "jest": "^29.7.0",
+    "jest-worker": "^29.7.0",
     "mini-css-extract-plugin": "2.6.1",
     "postcss-loader": "7.0.1",
     "webpack": "5.76.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.9.3"
+  },
+  "dependencies": {
+    "url": "^0.11.3"
   }
 }
